# antivirusSystemimproves-MCP

./: .coverage  .gitignore  GLOBAL_RULES.md  PLANNING.md  README.md  TASK.md  comprehensive_mcp_test.py  coverage.xml  intrusion_detection_client.py  intrusion_scan_results.txt  mcp-win-admin.spec  pyproject.toml
native/overwatch-mcp-rs/: Cargo.toml
native/overwatch-mcp-rs/src/: main.rs
native/overwatch-mcp-rs/target-rs-mcp/release/: overwatch-mcp.d
native/overwatch-mcp-rs/target-rs-mcp/release/.fingerprint/anstyle-6f6e6eb71106fdca/: lib-anstyle
native/overwatch-mcp-rs/target-rs-mcp/release/.fingerprint/anstyle-parse-6cd2784b1670f8f1/: lib-anstyle_parse.json
native/overwatch-mcp-rs/target-rs-mcp/release/.fingerprint/anstyle-query-4b564e7668420643/: lib-anstyle_query  lib-anstyle_query.json
native/overwatch-mcp-rs/target-rs-mcp/release/.fingerprint/anstyle-wincon-b9b29ef9cb36029b/: lib-anstyle_wincon  lib-anstyle_wincon.json
native/overwatch-mcp-rs/target-rs-mcp/release/.fingerprint/anyhow-779b65c613d0f538/: run-build-script-build-script-build  run-build-script-build-script-build.json
native/overwatch-mcp-rs/target-rs-mcp/release/.fingerprint/anyhow-ae820e7635ccaa99/: build-script-build-script-build  build-script-build-script-build.json
native/overwatch-mcp-rs/target-rs-mcp/release/.fingerprint/bytes-e8fed1fe3a0d120c/: lib-bytes
native/overwatch-mcp-rs/target-rs-mcp/release/.fingerprint/cfg-if-532db2339c3e11a6/: lib-cfg_if  lib-cfg_if.json
native/overwatch-mcp-rs/target-rs-mcp/release/.fingerprint/chrono-c05db89b3dc47f66/: lib-chrono  lib-chrono.json
native/overwatch-mcp-rs/target-rs-mcp/release/.fingerprint/clap-4c0006189bce4f0e/: lib-clap  lib-clap.json
native/overwatch-mcp-rs/target-rs-mcp/release/.fingerprint/clap_derive-69d11ad6eaaf833b/: lib-clap_derive  lib-clap_derive.json
native/overwatch-mcp-rs/target-rs-mcp/release/.fingerprint/colorchoice-1a4caca9f3b413af/: lib-colorchoice
native/overwatch-mcp-rs/target-rs-mcp/release/.fingerprint/crossbeam-deque-252a1ebeaf6cf978/: lib-crossbeam_deque.json
(+226 files in other folders)
